Fix cards section spacing and working

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,12 @@
     background-color: var(--gray5-color);
 }
 
+/* Cards section */
+
+#cards {
+    margin-top: 500px;
+}
+
 /* Calculators */
 
 .calcBg {
